# simple_update_checker

./: .gitignore  Cargo.toml  Dockerfile  README.md  changelog.md  docker-compose-template.yml  flake.nix  programs.db
migrations/: 20250321135120_base_setup.sql  20250322084649_current_version.sql  20250323180628_update_checks.sql  20250323190249_versions_last_update.sql  20250324161724_notification_sent.sql  20250324173525_update_history.sql  20250324183947_rename_update_checks_time_column.sql  20250324203354_update_checks_add_updates_available.sql
src/: actions.rs  cli.rs  config.rs  db.rs  lib.rs  main.rs  notification.rs  update_check.rs
src/actions/: add_program.rs  mod.rs  run_timed.rs
src/db/: mod.rs  programs.rs  update_check_history.rs  update_history.rs
src/db/program/: mod.rs  notification.rs  version.rs
