[package]
name = "simple_update_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive", "env"] }
dotenvy = "0.15.7"
reqwest = "0.12.15"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
